# service-web-back

./: .env.example  NOSQL_INTEGRATION_COMPLETE.md  README.md  codecov.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: CODECOV_SETUP.md
.github/workflows/: ci.yml
docs/: API_ENDPOINTS.md  API_NOSQL_INTEGRATION.md  API_QUICK_REFERENCE.md  API_REFERENCE_COMPLETE.md  COMPLETE_NOSQL_SIMULATION.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  NOSQL_ARCHITECTURE.md  NOSQL_COMPLETE_SUMMARY.md  QUICK_START_NOSQL.md  README.md  README_NOSQL.md  RUN_SIMULATION.md  TDD_IMPLEMENTATION_PLAN.md  TEST_RESULTS.md
scripts/: cassandra-init.cql  mongo-init.js  simulate_complete_nosql.py  simulate_system.py
src/routes/: devices.py  telemetry_postgres.py  users.py
src/services/: cassandra_telemetry.py  mongodb_service.py  redis_cache.py
tests/: test_admin_user_deletion.py  test_cassandra_service.py  test_devices_nosql.py  test_groups_nosql.py  test_integration_nosql.py  test_mongodb_service.py  test_redis_service.py  test_user_deactivation.py  test_users_nosql.py
