[tool.poetry]
name = "iotflow backend"
version = "0.1.0"
description = "IoTFlow Backend with Flask and PostgreSQL"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.5"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
werkzeug = "^2.3.7"
flask-cors = "^6.0.1"
requests = "^2.32.4"
psutil = "^7.0.0"

asyncio-mqtt = "^0.16.1"
cryptography = "^41.0.4"
tabulate = "^0.9.0"
prometheus-client = "^0.22.1"
gunicorn = "^23.0.0"
gevent = "^25.5.1"
psycopg2-binary="^2.9"  
flask-swagger-ui = "^5.21.0"
flasgger = "^0.9.7.1"
cassandra-driver = "^3.29.3"
redis = "^7.1.0"
pymongo = "^4.15.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-flask = "^1.2.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^7.3.0"
isort = "^5.12.0"
mypy = "^1.5.1"
bandit = "^1.8.6"
locust = "^2.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init-db = "init_db:main"
run-app = "app:main"

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", ".venv", "venv", ".env"]
ignore = ["E203", "W503"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120